added basic code to run the server

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ecommerce_api_project",
   "version": "1.0.0",
   "description": "Ecommerce_api_project with nodejs, mongodb, Express.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
